# hymn-batch-manager

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  config.py  logging_config.py  main.py
app/database/: __init__.py  models.py  repositories.py  session.py
app/domain/: __init__.py  enums.py
app/services/: repertoire_service.py
app/ui/: main_window.py  styles.py
app/ui/pages/: __init__.py  home_page.py  repertoire_page.py
app/utils/: __init__.py  text.py
docs/: ARCHITECTURE.md
migrations/: README  env.py
migrations/versions/: 20260718_0001_initial.py
packaging/: hymn_batch_manager.spec
scripts/: build.ps1  lint.ps1  run.ps1  setup.ps1  test.ps1
tests/integration/: test_repertoire_service.py
tests/ui/: test_main_window.py
tests/unit/: test_text.py
